--- a/index.html
+++ b/index.html
@@ -1,1 +1,281 @@
-Hello World
+<!DOCTYPE html>
+<html class="no-js" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>André Cássio</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="mobile-menu-open" class="shadow-large">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
+    <!-- End #mobile-menu-toggle -->
+    <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+        </div>
+        <ul id="menu" class="shadow">
+            <li>
+                <!--a href="file:///home/andre/Dev/andreloff.github.io/index.html" class="no-scroll">About Me</a-->
+                <a href="https://andreloff.github.io/index.html" class="no-scroll">About Me</a>
+            </li>
+            <li>
+                <!--a href="file:///home/andre/Dev/andreloff.github.io/gameportfolio.html" class="no-scroll">Game Dev Portfolio</a-->
+                <a href="https://andreloff.github.io/gameportfolio.html" class="no-scroll">Game Dev Portfolio</a>
+            </li>
+        </ul>
+    </header>
+    <!-- End header -->
+
+    <div id="lead">
+        <div id="lead-content">
+            <h1>André Cássio</h1>
+            <h2>Software Developer</h2>
+            <a href="assets/andreresumeptbr.pdf" download="andreresumeptbr.pdf" class="btn-rounded-white">Open Resume PT-BR</a>
+            <a href="assets/andreresumeenus.pdf" download="andreresumeenus.pdf" class="btn-rounded-white">Open Resume EN-US</a>
+        </div>
+        <!-- End #lead-content -->
+
+        <div id="lead-overlay"></div>
+
+        <div id="lead-down">
+            <span>
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+        </div>
+        <!-- End #lead-down -->
+    </div>
+    <!-- End #lead -->
+
+
+    <div id="education">
+        <h2 class="heading">About me</h2>
+        <p>
+            I'm a Brazilian developer who loves creating softwares that can be useful to people, if it is to increase their productivity or just make them happy.
+        </p>
+        <p>
+            Always looking for learn and increase my knowledge about computers and softwares. Love to game and understand how games are made.
+        </p>
+    </div>
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">Education</h2>
+                </div>
+                <div class="col-md-8">
+                    <div class="education-block">
+                        <h3>University of Brasília</h3>
+                        <span class="education-date">Augu 2016 - Present</span>
+                        <h4>Bachelor in Computer Science</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">Professional Experience</h2>
+                </div>
+                <div class="col-md-8">
+                    <div class="education-block">
+                        <h3>Go Educa</h3>
+                        <span class="education-date">Dec 2017 - July 2018</span>
+                        <h4>Learning platform using educational games</h4>
+                        <ul>
+                            <li>
+                                First game programmer in the company.
+                            </li>
+                            <li>
+                                More than six modular games developed. 
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">Competitive Programming</h2>
+                </div>
+                <div class="col-md-8">
+                    <div class="education-block">
+                        <h3>IESB Marathon</h3>
+                        <span class="education-date">2017</span>
+                        <h4></h4>
+                        <ul>
+                            <li>
+                                First place
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="education-block">
+                        <h3>OBI</h3>
+                        <span class="education-date">2017</span>
+                        <h4>Brazilian Computing Olympics</h4>
+                        <ul>
+                            <li>
+                                Second place in first phase
+                            </li>
+                            <li>
+                                Second place in second phase
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="education-block">
+                        <h3>ICPC</h3>
+                        <span class="education-date">2017</span>
+                        <h4>International Collegiate Programming Contest</h4>
+                        <ul>
+                            <li>
+                                Official competitor
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">Game Jams</h2>
+                </div>
+                <div class="col-md-8">
+                    <div class="education-block">
+                        <h3>JAM Nerd Festival</h3>
+                        <span class="education-date">2016</span>
+                        <h4></h4>
+                        <ul>
+                            <li>
+                                First Game Jam
+                            </li>
+                            <li>
+                                Second place.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="education-block">
+                        <h3>Global Game Jam</h3>
+                        <h4></h4>
+                        <ul>
+                            <li>
+                                2017:
+                                <a href= "https://v3.globalgamejam.org/2017/games/arecibo">Arecibo</a>
+                            </li>
+                            <li>
+                                2018:
+                                <a href= "https://v3.globalgamejam.org/2018/games/ebm-endless-bug-machine">E.B.M - Endless Bug Machine</a>
+                            </li>
+                            <li>
+                                2020:
+                                <a href= "https://v3.globalgamejam.org/2020/games/free-hugs-inc-4">Free Hugs INC.</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="education-block">
+                        <h3>Mad jam</h3>
+                        <h4></h4>
+                        <ul>
+                            <li>
+                                2018:
+                                <a href= "https://andreloff.itch.io/kleber-cup">Kleber Cup</a>
+                            </li>
+                            <li>
+                                2019:
+                                <a href= "https://kosha.itch.io/shake-your-friends">Shake your Friends</a>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                    <div class="education-block">
+                        <h3>Flipper jam</h3>
+                        <h4></h4>
+                        <ul>
+                            <li>
+                                2018:
+                                <a href= "https://andreloff.itch.io/th">Thornside</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="skills">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">Skills</h2>
+                </div>
+                <div class="col-md-8">
+                    <ul>
+                        <li>Unity 3D</li>
+                        <li>C</li>
+                        <li>C++</li>
+                        <li>C#</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-5 copyright">
+                    <p>
+                        André Cássio
+                    </p>
+                </div>
+                <div class="col-sm-2 top">
+                    <span id="to-top">
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="col-sm-5 social">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/andreloff" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://linkedin.com/in/andré-cássio-barros-de-souza-637150163" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/_andreloff" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End footer -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/scripts.min.js"></script>
+</body>
+
+</html>
