--- a/gameportfolio.html
+++ b/gameportfolio.html
@@ -19,22 +19,6 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
     <!-- End #mobile-menu-toggle -->
-    <header>
-        <div id="mobile-menu-close">
-            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
-        </div>
-        <ul id="menu" class="shadow">
-            <li>
-                <!--a href="file:///home/andre/Dev/andreloff.github.io/index.html" class="no-scroll">About Me</a-->
-                <a href="https://andreloff.github.io/index.html" class="no-scroll">About Me</a>
-            </li>
-            <li>
-                <!--a href="file:///home/andre/Dev/andreloff.github.io/gameportfolio.html" class="no-scroll">Game Dev Portfolio</a-->
-                <a href="https://andreloff.github.io/gameportfolio.html" class="no-scroll">Game Dev Portfolio</a>
-            </li>
-        </ul>
-    </header>
-    <!-- End header -->
 
     <div id="leadgp">
         <div id="leadgp-content">
@@ -45,14 +29,21 @@
 
         <div id="leadgp-overlay"></div>
 
-        <div id="leadgp-down">
-            <span>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-            </span>
-        </div>
         <!-- End #lead-down -->
     </div>
     <!-- End #lead -->
+
+    <div id="mymenu">
+        <div class="container">
+            <ul>
+                <li><a href="https://andreloff.github.io/index.html">About me</a></li>
+                <!--li><a href="file:///home/andre/Dev/andreloff.github.io/index.html">About me</a></li-->
+
+                <li><a href="https://andreloff.github.io/gameportfolio.html">Game Portfolio</a></li>
+                <!--li><a href="file:///home/andre/Dev/andreloff.github.io/gameportfolio.html">Game Portfolio</a></li-->
+            </ul>
+        </div>
+    </div>
 
     <div id="projects" class="background-alt">
         <h2> </h2>
