--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div id="lead-content">
             <h1>André Cássio</h1>
             <h2>Software Developer</h2>
-            <a href="assets/andreresumeptbr.pdf" download="andreresumeptbr.pdf" class="btn-rounded-white">Open Resume PT-BR</a>
-            <a href="assets/andreresumeenus.pdf" download="andreresumeenus.pdf" class="btn-rounded-white">Open Resume EN-US</a>
+            <a href="assets/andreresumeptbr.pdf" download="andreresumeptbr.pdf" class="btn-rounded-white">Download Resume PT-BR</a>
+            <a href="assets/andreresumeenus.pdf" download="andreresumeenus.pdf" class="btn-rounded-white">Download Resume EN-US</a>
         </div>
         <!-- End #lead-content -->
 
